Call for Presentations button + small changes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies<br class="hide-on-mobile" />
         for programmers interested in polyglot approach to software development.
       </p>
+			<div class="button-container" style="margin-top: 50px">						
+				<a href="#" class="big green button">Call for Presentations</a>						
+			</div>
     </div>
   </section>
 
@@ -62,7 +65,9 @@
 
         <p>
           PolyConf is not focused on any particular language or area of technology.<br class="hide-on-mobile" />
-          Our mission is to promote polyglot approach to software development and foster cross-pollination between various technologies and their communities. 
+          Our mission is to promote polyglot approach to software development<br class="hide-on-mobile" />
+          and foster cross-pollination between various technologies<br class="hide-on-mobile" />
+          and their communities. 
         </p>
       </div>
     </section>
@@ -80,7 +85,8 @@
         <h2>Venue</h2>
 
         <p>
-          PolyConf will happen at The Faculty of Law and Administration of Adam Mickiewicz University in the heart of the city of POZnan, Poland. <br class="hide-on-mobile" />
+          PolyConf will happen at The Faculty of Law and Administration<br class="hide-on-mobile" />
+          of Adam Mickiewicz University in the heart of the city of POZnan, Poland. <br class="hide-on-mobile" />
           The center has an auditiorium that can host 400 and additional workshop rooms.
         </p>
       </div>
