improv: add CFP button
Former-commit-id: 9acbc43b9867dbcaac82f63ff7671ce61767a7db
Former-commit-id: 9681aa45cca6e5364bdd2f9d17fcf4c74a475a3b

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies for programmers interested in polyglot approach to software development." />
   <meta name="author" content="PolyConf HQ" />
-  
+
   <script src="//use.typekit.net/nxq5wzz.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 
@@ -52,9 +52,10 @@
         PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies<br class="hide-on-mobile" />
         for programmers interested in polyglot approach to software development.
       </p>
-			<div class="button-container" style="margin-top: 50px">						
-				<a href="#" class="big green button">Call for Presentations</a>						
-			</div>
+      <div class="button-container" style="margin-top: 50px">
+      <a href="http://bit.ly/polyconf15-cfp" class="big green button">Submit your proposal</a>
+      <p><strong>Open until March, 8th</strong></p>
+      </div>
     </div>
   </section>
 
@@ -67,7 +68,7 @@
           PolyConf is not focused on any particular language or area of technology.<br class="hide-on-mobile" />
           Our mission is to promote polyglot approach to software development<br class="hide-on-mobile" />
           and foster cross-pollination between various technologies<br class="hide-on-mobile" />
-          and their communities. 
+          and their communities.
         </p>
       </div>
     </section>
@@ -91,20 +92,20 @@
         </p>
       </div>
     </section>
-    
+
     <section class="content">
       <ul id="venue-photos">
         <li class="photo" style="background-image:url(assets/venue/7.jpg)"><div class="img"></div></li>
         <li class="photo" style="background-image:url(assets/venue/8.jpg)"><div class="img"></div></li>
         <li class="photo" style="background-image:url(assets/venue/9.jpg)"><div class="img"></div></li>
     </ul>
-    
+
     <div id="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2433.494112388599!2d16.92514301215121!3d52.41584419853933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x9e03687bbc122844!2sCollegium+Iuridicum+Novum!5e0!3m2!1sen!2ses!4v1421853680926" frameborder="0" style="border:0"></iframe>
     </div>
 
   </section>
-  
+
 </article>
 
 
