--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li><a href="#about">About</a></li>
     <li><a href="#speakers">Speakers</a></li>
     <li><a href="#venue">Venue</a></li>
-    <li><a href="#codestarter">Programming for kids</a></li>
+    <li><a href="#codestarter">Programming for young people</a></li>
     <li><a href="#testimonials">Testimonials</a></li>
   </ul>
 </nav>
@@ -73,8 +73,8 @@
   <section id="quote-bar">
     <div class="container">
 
-      <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar"><figure style="background-image:url('https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7_bigger.jpeg')">&nbsp;</figure></a>
-      <p>#polyconf was a best conference I've attended for a long, long time. Definitely plan to get back next year. :)</p>
+      <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar"><figure style="background-image:url('')">&nbsp;</figure></a>
+<p>#polyconf was a best conference I've attended for a long, long time. Definitely plan to get back next year. :)<br/><small>@asolovyov</small></p>
       <a href="#quotes" id="more-quotes" class="small white button">More quotes</a>
 
     </div>
@@ -96,20 +96,27 @@
     <section class="content">
       <div class="container">
         <ul class="speaker-list">
-            <li class="speaker"><div class="inside">
-
-                <div class="img"><figure><a class="face" style="background-image: url()">&nbsp;</a></figure></div>
-                <div class="text">
-                  <h3>Name Surname</h3>
-                  <p class="title">Title or occupation</p>
-                  <p class="description">Nulla vitae elit libero, a pharetra augue. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                  <ul class="tags">
-                    <li class="js">JavaScript</li>
-                    <li class="cljs">ClojureScript</li>
-                  </ul>
-                </div>
-
-            </div></li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+<figure><a class="face" style="background-image: url(assets/speakers/jessica_kerr.jpg)">&nbsp;</a></figure>
+                <span class="links">
+                  <a class="twitter" href="#">&nbsp;</a>
+                  <a class="website" href="#">&nbsp;</a>
+                </span>
+              </div>
+              <div class="text">
+                <h3>Jessica Kerr</h3>
+                <p class="title">Developer at Outpace Systems</p>
+                <p class="description">Jessica Kerr writes Clojure and Scala. Her fascinations include property-based testing and the sociological underpinnings of software. She codes remotely for Outpace, blogs, and teaches two daughters how to keep the spirit of the rule while breaking it. Her home in St. Louis, Missouri has five computers and no pets, unless ladybug larvae count as pets.</p>
+                <ul class="tags">
+                  <li class="js">Java</li>
+                  <li class="cljs">Clojure</li>
+                  <li class="sc">Scala</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
@@ -146,7 +153,7 @@
   <article id="codestarter">
     <section class="intro">
       <div class="container">
-        <h2>Programming for Kids</h2>
+        <h2>Programming for young people</h2>
       </div>
     </section>
     <section class="content">
@@ -157,14 +164,14 @@
           <div class="column">
 
             <h2>CodeStarter Campaign</h2>
-            <h4>If a kid is going to learn to code, they need a computer.</h4>
-            <p>% of each ticket will be donated to CodeStarter - they will ship a new laptop to a child waiting to enroll in a programming class.</p>
+            <h4>« If a kid is going to learn to code, they need a computer. »</h4>
+<p>% of each ticket will be donated to <a href="https://codestarter.org/">CodeStarter</a> - they will ship a new laptop to a child waiting to enroll in a programming class.</p>
 
           </div>
 
           <div class="column">
 
-            <h2>Programming workshops for young people</h2>
+            <h2>Workshops for youngsters</h2>
             <p>TBA</p>
 
           </div>
@@ -204,8 +211,32 @@
               Polyconf was the best conference I have ever been to.
             </div>
             <div class="person">
-              <figure class="avatar" style="background-image:url()"></figure>
+              <figure class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/553517399400398848/19ApvW_M_400x400.jpeg')"></figure>
               <p class="name">@damnpepe</p>
+            </div>
+
+          </div></li>
+
+          <li class="quote"><div>
+
+            <div class="text">
+              Back home from PolyConf, with mind expanded in several dimensions and a long list of things to look at more deeply. Great experience!
+            </div>
+            <div class="person">
+              <figure class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/2612989171/3t6855gh38v2v9du5kiv_400x400.jpeg')"></figure>
+              <p class="name">@dmajda</p>
+            </div>
+
+          </div></li>
+
+          <li class="quote"><div>
+
+            <div class="text">
+              PolyConf was awesome! I'm leaving Poznań greatly inspired. Big thanks to organizers, speakers and attendees for this great event.
+            </div>
+            <div class="person">
+              <figure class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/354117123/avatar_400x400.jpg')"></figure>
+              <p class="name">@bartoszblimke</p>
             </div>
 
           </div></li>
@@ -216,7 +247,7 @@
               Back home from PolyConf  - it was a really great event, I enjoyed it a lot. Also, Poznan is a beautiful city. See y'all next year!
             </div>
             <div class="person">
-              <figure class="avatar" style="background-image:url()"></figure>
+              <figure class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/508411634394468352/V3tLNOTf_400x400.png')"></figure>
               <p class="name">@michalvalasek</p>
             </div>
 
