--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="description" content="PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies for programmers interested in polyglot approach to software development." />
-  <meta name="author" content="PolyConf HQ" />
+  <meta name="author" content="PolyConf HQ || Designed by true.pl" />
 
   <script src="//use.typekit.net/nxq5wzz.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
@@ -26,6 +26,7 @@
     <li><a href="#venue">Venue</a></li>
     <li><a href="#codestarter">Programming for young people</a></li>
     <li><a href="#testimonials">Testimonials</a></li>
+    <li><a href="#testimonials">Become a Sponsor</a></li>
   </ul>
 </nav>
 
@@ -44,7 +45,12 @@
 
   <section id="the-bar">
     <div class="container">
-      <div class="newsletter inline-block">
+	    <div class="become-a-sponsor inline-block" style="margin-right: 2em">
+		    
+		    <a href="#" class="medium blue button"><label>Become a sponsor</label></a>
+		    
+	    </div>
+	    <div class="newsletter inline-block">
         <span>Join our newsletter for updates</span>
         <form action="http://polyconf.us2.list-manage.com/subscribe/post?u=294dfa55a7b056bcc82ffae2d&amp;id=409201e872" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" data-abide>
           <div id="newsletter-form" class="inline-block">
@@ -73,7 +79,7 @@
   <section id="quote-bar">
     <div class="container">
 
-      <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar"><figure style="background-image:url('')">&nbsp;</figure></a>
+      <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/508411634394468352/V3tLNOTf_400x400.png')">&nbsp;</a>
 <p>#polyconf was a best conference I've attended for a long, long time. Definitely plan to get back next year. :)<br/><small>@asolovyov</small></p>
       <a href="#quotes" id="more-quotes" class="small white button">More quotes</a>
 
