improv: adjust various texts
Former-commit-id: 8b18a1fc44b237d4b91fd7fa76fef139938a5b5c
Former-commit-id: ae5d315be41f40a0e3e55f5bc8a93558901e4586

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li><a href="#about">About</a></li>
     <li><a href="#speakers">Speakers</a></li>
     <li><a href="#venue">Venue</a></li>
-    <li><a href="#codestarter">Programming for young people</a></li>
+    <li><a href="#codestarter">Young People</a></li>
     <li><a href="#testimonials">Testimonials</a></li>
     <li><a href="#testimonials">Become a Sponsor</a></li>
   </ul>
@@ -79,7 +79,7 @@
   <section id="quote-bar">
     <div class="container">
 
-      <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/508411634394468352/V3tLNOTf_400x400.png')">&nbsp;</a>
+      <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7_400x400.jpeg')">&nbsp;</a>
 <p>#polyconf was a best conference I've attended for a long, long time. Definitely plan to get back next year. :)<br/><small>@asolovyov</small></p>
       <a href="#quotes" id="more-quotes" class="small white button">More quotes</a>
 
@@ -159,7 +159,7 @@
   <article id="codestarter">
     <section class="intro">
       <div class="container">
-        <h2>Programming for young people</h2>
+        <h2>Young people</h2>
       </div>
     </section>
     <section class="content">
@@ -203,7 +203,7 @@
         <h2>Testimonials</h2>
 
         <p>
-          What people say about last edition of Poly Conf.
+          What people say about PolyConf
         </p>
       </div>
     </section>
@@ -272,7 +272,7 @@
     <div class="about-us">
 
       <h4>About us</h4>
-      <p>Come to Poznan, Poland in July 2015 to meet programmers interested in polyglot software development. Lets talk about future&nbsp;of&nbsp;Computer Science!</p>
+      <p>Come to Poznan, Poland in July 2015 to meet programmers interested in polyglot approach to software development.</p>
       <p class="copy">&copy; Copyright PolyConf, 2015</p>
 
     </div>
