improv: add sponsorship button
Former-commit-id: fd128488355b694b4a585582e275279a5878be97
Former-commit-id: b220e0ec9566d32d6cd3526ca71676d9e219743b

--- a/index.html
+++ b/index.html
@@ -45,12 +45,10 @@
 
   <section id="the-bar">
     <div class="container">
-	    <div class="become-a-sponsor inline-block" style="margin-right: 2em">
-		    
-		    <a href="#" class="medium blue button"><label>Become a sponsor</label></a>
-		    
-	    </div>
-	    <div class="newsletter inline-block">
+      <div class="become-a-sponsor inline-block" style="margin-right: 2em">
+        <a href="http://sponsor.polyconf.com" class="medium blue button"><label>Become a sponsor</label></a>
+      </div>
+      <div class="newsletter inline-block">
         <span>Join our newsletter for updates</span>
         <form action="http://polyconf.us2.list-manage.com/subscribe/post?u=294dfa55a7b056bcc82ffae2d&amp;id=409201e872" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" data-abide>
           <div id="newsletter-form" class="inline-block">
