improv: adjust Jessica's profile
Former-commit-id: c67e278f6a51fe2b7e81de37f499a44858ddddda
Former-commit-id: e3eb3fee01c7eec7726fbbd1ea8b8a24b87cae26

--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@
           <li class="speaker">
             <div class="inside">
               <div class="img">
-<figure><a class="face" style="background-image: url(assets/speakers/jessica_kerr.jpg)">&nbsp;</a></figure>
-                <span class="links">
-                  <a class="twitter" href="#">&nbsp;</a>
-                  <a class="website" href="#">&nbsp;</a>
-                </span>
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/jessica_kerr.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/jessitron">&nbsp;</a>
+                    <a class="website" href="http://jessitron.com">&nbsp;</a>
+                  </span>
+                </figure>
               </div>
               <div class="text">
                 <h3>Jessica Kerr</h3>
