speaker: Bodil Stokke
Former-commit-id: ec0be651959492ed69774a51909435fe8dc5553e
Former-commit-id: 9efd3ffce40a46c944a8398f595f16b7a6ef38a2

--- a/index.html
+++ b/index.html
@@ -123,6 +123,29 @@
               </div>
             </div>
           </li>
+
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/bodil_stokke.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/bodil">&nbsp;</a>
+                    <a class="website" href="http://bodil.org/">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Bodil Stokke</h3>
+                <p class="title">Functional Programming Hipster</p>
+                <p class="description">Bodil is a a bishop of the Greater London diocese of the Church of Emacs, and a compulsive conference speaker in the fields of functional programming and internets technologies, and is a co-organiser of multiple developer conferences in Scandinavia and the UK, mostly because she’s still learning how to stop. Her favourite pony is Pinkie Pie.</p>
+                <ul class="tags">
+                  <li class="js">JavaScript</li>
+                  <li class="cljs">Clojure</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
