speaker: add Leah Hanson
Former-commit-id: fa785f008c795ab314b04335624c231f82f046a5
Former-commit-id: c2dd9607c122afbcf55cb36d96b7db1c14fa45bd

--- a/index.html
+++ b/index.html
@@ -146,6 +146,30 @@
               </div>
             </div>
           </li>
+
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/leah_hanson.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/astrieanna">&nbsp;</a>
+                    <a class="website" href="http://blog.leahhanson.us">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Leah Hanson</h3>
+                <p class="title">Software Engineer at Google</p>
+                <p class="description">
+Leah is currently a software engineer at Google. She spent the Spring of 2013 at <a href="http://hackerschool.com">Hacker School</a>, where she started learning <a href="http://julialang.org">Julia</a> and wrote the <a href="https://github.com/JuliaWeb/Websockets.jl">Websockets.jl package</a>. Since then, she has spoken about Julia at several conferences, including Strange Loop, Strata NYC, and YOW!.</p>
+                <ul class="tags">
+                  <li class="julia">Julia</li>
+                  <li class="c">C/C++</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
