speaker: Daniel Holden / Christine Corbett
Former-commit-id: f2f1f2ec2962a845710623b6dc71c497c63babc7
Former-commit-id: 31ab2e9aa84349d535db7db617831201bca95cdc

--- a/index.html
+++ b/index.html
@@ -170,6 +170,58 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
               </div>
             </div>
           </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/daniel_holden.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/anorangeduck">&nbsp;</a>
+                    <a class="website" href="http://theorangeduck.com/">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Daniel Holden</h3>
+                <p class="title">Author of Cello programming library</p>
+                <p class="description">Daniel Holden is a PhD student at Edinburgh University doing research into machine learning, and data driven approaches to character animation. He is a prolific C hacker with a flair for creative and interesting projects, that have gathered considerable attention in the open source community. As well as hacking on C, he enjoys writing short stories, constructing digital art, and game development. </p>
+                <ul class="tags">
+                  <li class="py">Python</li>
+                  <li class="c">C/C++</li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/christine_corbett.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/corbett">&nbsp;</a>
+                    <a class="website" href="http://christinecorbettmoran.com">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Christine Corbett Moran</h3>
+                <p class="title">Dev at Open WhisperSystems, Postdoctoral Researcher at Caltech</p>
+                <p class="description">PhD in Theoretical Astrophysics at the University of Zurich. A postdoc in Theoretical Physics at Caltech. I do research in computational astrophysics, high performance computing, and big data visualization.
+
+Prior to that I've worked at SpaceX, BBN Technologies, MIT CSAIL, MIT Media Lab, Lucent Technologies (Bell Labs Site), FAST Search and Transfer, UP Diliman, MIT, JHU, and MIT MEET as a software engineer, research scientist, or lecturer/professor.
+
+Physics and Computer Science (double major) and Mathematics and Philosophy (double minor) at MIT and obtained a Master's degree in Astrophysics from UZH.
+
+In my free time, I do a lot of open source and mobile application development oriented around technical activism, gender based violence and social justice. I am the co-lead of the iOS team at Open WhisperSystems, and technical lead on the Circle of 6 and Encyclopedia apps. </p>
+                <ul class="tags">
+                  <li class="java">Java</li>
+                  <li class="py">Python</li>
+                  <li class="c">C/C++</li>
+                  <li class="c">Objective C</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
