fix: sponsor link in the upper menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <li><a href="#venue">Venue</a></li>
     <li><a href="#codestarter">Young People</a></li>
     <li><a href="#testimonials">Testimonials</a></li>
-    <li><a href="#testimonials">Become a Sponsor</a></li>
+    <li><a href="http://sponsor.polyconf.com">Become a Sponsor</a></li>
   </ul>
 </nav>
 
