speaker: Stefan Karpinski

--- a/index.html
+++ b/index.html
@@ -222,6 +222,28 @@ In my free time, I do a lot of open source and mobile application development or
               </div>
             </div>
           </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/stefan_karpinski.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/StefanKarpinski">&nbsp;</a>
+                    <a class="website" href="http://karpinski.org/">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Stefan Karpinski</h3>
+                <p class="title">Julia co-creator</p>
+                <p class="description">Stefan Karpinski is a co-creator of the Julia programming language – a next-generation language for numerical and scientific computing. He is also a co-founder of Julia Computing LLC (which provides professional consulting, training and support for Julia), and has previously worked as a data scientist, research scientist, and software engineer at Etsy, Citrix Online, and Akamai.</p>
+                <ul class="tags">
+                  <li class="c">C/C++</li>
+                  <li class="julia">Julia</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
