speaker: Amir Chaudhry

--- a/index.html
+++ b/index.html
@@ -244,6 +244,27 @@ In my free time, I do a lot of open source and mobile application development or
               </div>
             </div>
           </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/amir_chaudhry.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/amirmc">&nbsp;</a>
+                    <a class="website" href="http://amirchaudhry.com">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Amir Chaudhry</h3>
+                <p class="title">PM at Cambridge Computer Laboratory</p>
+<p class="description">Amir is Programme Manager in the <a href="http://www.cl.cam.ac.uk/projects/ocamllabs/">OCaml Labs</a> group at the Cambridge Computer Laboratory, where he's is responsible for co-ordinating efforts towards the OCaml Platform. Amir's also Community Manager for the rapidly growing <a href="http://mirage.io">MirageOS</a> project, where he's overseen two major releases and spread knowledge about unikernels and building safer systems. Amir's industrial experience extends from early-stage startups to blue chip multi-nationals and ranges from product management to finance.</p>
+                <ul class="tags">
+                  <li class="ocaml">OCaml</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
