fix: parties and Twitter image
Former-commit-id: a1904eaf52166c07fbf6d43ac40e279ab3b5d52d
Former-commit-id: 83240ae25be3ba271b69450cdcd3212a53ecb3a7

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
            <div class="column" id="number-of-parties">
 
              <figure><img src="assets/img/beer.svg" alt="Party" /></figure>
-             <span class="big">5</span>
+             <span class="big">3</span>
              <span class="small">parties</span>
 
            </div>
@@ -154,7 +154,7 @@
         <section id="quote-bar">
           <div class="container">
 
-            <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/508411634394468352/V3tLNOTf_400x400.png')">&nbsp;</a>
+            <a href="https://twitter.com/asolovyov/status/528334618777624577" class="avatar" style="background-image:url('https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7_400x400.jpeg')">&nbsp;</a>
       <p>#polyconf was a best conference I've attended for a long, long time. Definitely plan to get back next year. :)<br/><small>@asolovyov</small></p>
             <a href="#quotes" id="more-quotes" class="small white button">More quotes</a>
 
