speakers: William & Robert
Former-commit-id: 64df25bc20d721dd6a7079092d12263905499c90
Former-commit-id: 4fb4af03dc63dfb88315d8b6ac6acb5585ee727d

--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
                 <p class="title">Dev at Open WhisperSystems, Postdoctoral Researcher at Caltech</p>
                 <p class="description">PhD in Theoretical Astrophysics at the University of Zurich. A postdoc in Theoretical Physics at Caltech. I do research in computational astrophysics, high performance computing, and big data visualization.
 
-Prior to that I've worked at SpaceX, BBN Technologies, MIT CSAIL, MIT Media Lab, Lucent Technologies (Bell Labs Site), FAST Search and Transfer, UP Diliman, MIT, JHU, and MIT MEET as a software engineer, research scientist, or lecturer/professor.
+                Prior to that I've worked at SpaceX, BBN Technologies, MIT CSAIL, MIT Media Lab, Lucent Technologies (Bell Labs Site), FAST Search and Transfer, UP Diliman, MIT, JHU, and MIT MEET as a software engineer, research scientist, or lecturer/professor.
 
-Physics and Computer Science (double major) and Mathematics and Philosophy (double minor) at MIT and obtained a Master's degree in Astrophysics from UZH.
+                Physics and Computer Science (double major) and Mathematics and Philosophy (double minor) at MIT and obtained a Master's degree in Astrophysics from UZH.
 
-In my free time, I do a lot of open source and mobile application development oriented around technical activism, gender based violence and social justice. I am the co-lead of the iOS team at Open WhisperSystems, and technical lead on the Circle of 6 and Encyclopedia apps. </p>
+                In my free time, I do a lot of open source and mobile application development oriented around technical activism, gender based violence and social justice. I am the co-lead of the iOS team at Open WhisperSystems, and technical lead on the Circle of 6 and Encyclopedia apps. </p>
                 <ul class="tags">
                   <li class="java">Java</li>
                   <li class="py">Python</li>
@@ -350,19 +350,56 @@ In my free time, I do a lot of open source and mobile application development or
               <div class="text">
                 <h3>Amir Chaudhry</h3>
                 <p class="title">PM at Cambridge Computer Laboratory</p>
-<p class="description">Amir is Programme Manager in the <a href="http://www.cl.cam.ac.uk/projects/ocamllabs/">OCaml Labs</a> group at the Cambridge Computer Laboratory, where he's is responsible for co-ordinating efforts towards the OCaml Platform. Amir's also Community Manager for the rapidly growing <a href="http://mirage.io">MirageOS</a> project, where he's overseen two major releases and spread knowledge about unikernels and building safer systems. Amir's industrial experience extends from early-stage startups to blue chip multi-nationals and ranges from product management to finance.</p>
+                <p class="description">Amir is Programme Manager in the <a href="http://www.cl.cam.ac.uk/projects/ocamllabs/">OCaml Labs</a> group at the Cambridge Computer Laboratory, where he's is responsible for co-ordinating efforts towards the OCaml Platform. Amir's also Community Manager for the rapidly growing <a href="http://mirage.io">MirageOS</a> project, where he's overseen two major releases and spread knowledge about unikernels and building safer systems. Amir's industrial experience extends from early-stage startups to blue chip multi-nationals and ranges from product management to finance.</p>
                 <ul class="tags">
                   <li class="ocaml">OCaml</li>
                 </ul>
               </div>
             </div>
           </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/robert_virding.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/rvirding">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Robert Virding</h3>
+                <p class="title">Co-Inventor of Erlang, Principal Language Expert</p>
+                <p class="description"></p>
+                <ul class="tags">
+                  <li class="erl">Erlang</li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/william_byrd.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/webyrd">&nbsp;</a>
+                    <a class="website" href="http://webyrd.net/">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>William Byrd</h3>
+                <p class="title">Postdoctoral Researcher, University of Utah</p>
+                <p class="description">William E. Byrd is a Postdoctoral Researcher in the U Combinator research group at the University of Utah. He is co-author of The Reasoned Schemer, and co-designer of several declarative languages: miniKanren (logic programming), Harlan (GPU programming), and Kanor (cluster programming). His StarCraft 2 handle is 'Rojex' (character code 715).</p>
+                <ul class="tags">
+                  <li class="erl">Racket</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
-
-
       </div>
-
-
     </article>
 
     <article id="venue-intro" class="fixed">
