--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 				<div class="bronze sponsors">
 					<ul>
 						<li class="bronze sponsor">
-							<div class="logo"><img src="assets/sponsors/intel.png" /></div>
+							<div class="logo"><a href="https://www-ssl.intel.com/content/www/us/en/homepage.html"><img src="assets/sponsors/intel.png" /></a></div>
 						</li>
 					</ul>
 
@@ -626,12 +626,12 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 
 					<ul class="partners">
 
-						<li class="main-partner"><img src="assets/partners/uam.svg" /></li>
-						<li class="partner"><img src="assets/partners/akai.svg" /></li>
-						<li class="partner"><img src="assets/partners/jugpoznan.gif" /></li>
-						<li class="partner"><img src="assets/partners/pyladies_berlin.png" /></li>
-						<li class="partner"><img src="assets/partners/pyladies_poland.png" /></li>
-						<li class="partner"><img src="assets/partners/railsgirls.svg" /></li>
+                        <li class="main-partner"><a href="https://amu.edu.pl/"><img src="assets/partners/uam.svg" /></a></li>
+                        <li class="partner"><a href="http://akai.org.pl/"><img src="assets/partners/akai.svg" /></a></li>
+                        <li class="partner"><a href="http://www.jug.poznan.pl/"><img src="assets/partners/jugpoznan.gif" /></a></li>
+                        <li class="partner"><a href="http://berlin.pyladies.com/"><img src="assets/partners/pyladies_berlin.png" /></a></li>
+                        <li class="partner"><a href="http://pyladies.pl/"><img src="assets/partners/pyladies_poland.png" /></a></li>
+                        <li class="partner"><a href="http://railsgirlsberlin.de/"><img src="assets/partners/railsgirls.svg" /></a></li>
 
 					</ul>
 
