improv: add link to blog

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <li><a href="#venue">Venue</a></li>
             <li><a href="#codestarter">Young people</a></li>
             <li><a href="#partners">Sponsors/Partners</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="http://sponsor.polyconf.com">Become a Sponsor</a></li>
+            <li><a href="http://blog.polyconf.com">Blog</a></li>
           </ul>
         </nav>
 
@@ -764,8 +764,9 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
         <li><a href="#codestarter">Young people</a></li>
         <li><a href="#partners">Partners</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
-        <li class="become"><a href="sponsor.polyconf.com">Become a Sponsor</a></li>
-        <li><a href="14.polyconf.com">Previous editions</a></li>
+        <li class="become"><a href="http://sponsor.polyconf.com">Become a Sponsor</a></li>
+        <li><a href="http://14.polyconf.com">Previous edition</a></li>
+        <li><a href="http://blog.polyconf.com">Blog</a></li>
       </ul>
 
   </div>
