improv: add link to previous edition
Former-commit-id: ee3ada273407e244e4fcf6dc2894edaf7a147cbd
Former-commit-id: 4c47751d6697ce6a994521b82b57e40b984e6bdd

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <li><a href="#speakers">Speakers</a></li>
             <li><a href="#venue">Venue</a></li>
             <li><a href="#codestarter">Young people</a></li>
-            <li><a href="#partners">Sponsors/Partners</a></li>
-            <li><a href="http://sponsor.polyconf.com">Become a Sponsor</a></li>
+            <li><a href="#partners">Sponsors</a></li>
+            <li><a href="http://14.polyconf.com">Previous edition</a></li>
             <li><a href="http://blog.polyconf.com">Blog</a></li>
           </ul>
         </nav>
