speaker: Sam Tobin-Hochstadt

--- a/index.html
+++ b/index.html
@@ -398,6 +398,27 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
               </div>
             </div>
           </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/sam_tobin_hochstadt.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/samth">&nbsp;</a>
+                    <a class="website" href="http://samth.github.io">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Sam Tobin-Hochstadt</h3>
+                <p class="title">Professor at Indiana University</p>
+                <p class="description">Sam is an Assistant Professor in the School of Informatics and Computing at Indiana University. He has worked on dynamic languages, type systems, module systems, and metaprogramming, including creating the Typed Racket system and popularizing the phrase “scripts to programs.” He is a member of the ECMA TC39 working group responsible for standardizing JavaScript, where he co-designed the module system for ES2015, the next version of JavaScript. </p>
+                <ul class="tags">
+                  <li class="erl">Racket</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </article>
@@ -751,26 +772,22 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 <span id="menu-link" data-anchor-target="#about" data-100-top="top: -50px" data-top="top: 50px">&nbsp;</span>
 
 <nav id="overlay">
-
   <span id="close-menu-link">&nbsp;</span>
 
   <div class="content">
-
-      <ul>
-        <li><a href="#header">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#speakers">Speakers</a></li>
-        <li><a href="#venue">Venue</a></li>
-        <li><a href="#codestarter">Young people</a></li>
-        <li><a href="#partners">Partners</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li class="become"><a href="http://sponsor.polyconf.com">Become a Sponsor</a></li>
-        <li><a href="http://14.polyconf.com">Previous edition</a></li>
-        <li><a href="http://blog.polyconf.com">Blog</a></li>
-      </ul>
-
+    <ul>
+      <li><a href="#header">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#speakers">Speakers</a></li>
+      <li><a href="#venue">Venue</a></li>
+      <li><a href="#codestarter">Young people</a></li>
+      <li><a href="#partners">Partners</a></li>
+      <li><a href="#testimonials">Testimonials</a></li>
+      <li class="become"><a href="http://sponsor.polyconf.com">Become a Sponsor</a></li>
+      <li><a href="http://14.polyconf.com">Previous edition</a></li>
+      <li><a href="http://blog.polyconf.com">Blog</a></li>
+    </ul>
   </div>
-
 </nav>
 
 
