--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 
           <div class="column">
 
-            <h2>Responsability</h2>
+            <h2>Responsibility</h2>
             <p class="text-small">The participant acknowledges that he/she may not engage in damage claims against the Conference Organizers should the holding of the Conference be hindered or prevented by unexpected political or economic events, natural disaster, the non-appearance of speakers, or other reasons that might necessitate a program change.</p>
 
             <p class="text-small">Organizers may cancel the event at any time and tickets will be refunded in full without any additional fees.</p>
