speaker: Joe Nash & Anna Pawlicka
Former-commit-id: bd5ffe6b2b2ba6f4667b1a5e6798aad82ec32b6d
Former-commit-id: 174354684d270ef79c9ed02700726bbd4bcebbe9

--- a/index.html
+++ b/index.html
@@ -419,6 +419,52 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
               </div>
             </div>
           </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/joe_nash.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/jna_sh">&nbsp;</a>
+                    <a class="website" href="http://braintreepayments.com">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Joe Nash</h3>
+                <p class="title">Developer Advocate at Braintree</p>
+                <p class="description">Joe is a Developer Advocate at Braintree Payments, a PayPal Company. Having learnt the dark arts of FP at the University of Nottingham, Joe is fanatical about the benefits of functional techniques and type theory, and applying them to software development. He believes in the educational benefits of hackathons and hack culture, and supports student hackathons as part of the European team at Major League Hacking.</p>
+                <ul class="tags">
+                  <li class="js">JavaScript</li>
+                  <li class="clj">Clojure</li>
+                  <li class="hs">Haskell</li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="speaker">
+            <div class="inside">
+              <div class="img">
+                <figure>
+                  <a class="face" style="background-image: url(assets/speakers/anna_pawlicka.jpg)">&nbsp;</a>
+                  <span class="links">
+                    <a class="twitter" href="http://twitter.com/annapawlicka">&nbsp;</a>
+                    <a class="website" href="http://annapawlicka.com">&nbsp;</a>
+                  </span>
+                </figure>
+              </div>
+              <div class="text">
+                <h3>Anna Pawlicka</h3>
+                <p class="title">Software Developer</p>
+                <p class="description">Anna Pawlicka codes mostly in Clojure and ClojureScript. She's been a developer on a variety of projects ranging from banking to robotics and big data. When she's not programming, she's organising ClojureBridge London, hiking or hacking on Lego EV3. She likes beer, films on a big screen and live music (of all sorts, with significant pull towards rock).</p>
+                <ul class="tags">
+                  <li class="js">JavaScript</li>
+                  <li class="clj">Clojure</li>
+                  <li class="cljs">ClojureScript</li>
+                </ul>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </article>
