speaker: update Anna's bio

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
               <div class="text">
                 <h3>Anna Pawlicka</h3>
                 <p class="title">Software Developer</p>
-                <p class="description">Anna Pawlicka codes mostly in Clojure and ClojureScript. She's been a developer on a variety of projects ranging from banking to robotics and big data. When she's not programming, she's organising ClojureBridge London, hiking or hacking on Lego EV3. She likes beer, films on a big screen and live music (of all sorts, with significant pull towards rock).</p>
+                <p class="description">Anna Pawlicka codes mostly in Clojure and ClojureScript. She's been a developer on a variety of projects ranging from banking to robotics and big data. When she's not programming, she's organising ClojureBridge London, hiking or hacking on Lego EV3.</p>
                 <ul class="tags">
                   <li class="js">JavaScript</li>
                   <li class="clj">Clojure</li>
