Added JUG Toruń logo to partners

--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
                         <li class="partner"><a href="http://akai.org.pl/"><img src="assets/partners/akai.svg" /></a></li>
                         <li class="partner"><a href="http://www.jug.poznan.pl/"><img src="assets/partners/jugpoznan.gif" /></a></li>
                         <li class="partner"><a href="http://jug.zgora.pl/"><img src="assets/partners/jugzgora.png" /></a></li>
+                        <li class="partner"><a href="http://torun.jug.pl/"><img src="assets/partners/jugTorun.png" /></a></li>
                         <li class="partner"><a href="http://berlin.pyladies.com/"><img src="assets/partners/pyladies_berlin.png" /></a></li>
                         <li class="partner"><a href="http://pyladies.pl/"><img src="assets/partners/pyladies_poland.png" /></a></li>
                         <li class="partner"><a href="http://railsgirlsberlin.de/"><img src="assets/partners/railsgirls.svg" /></a></li>
