Put Twilio logo on PolyConf website

--- a/index.html
+++ b/index.html
@@ -632,6 +632,9 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 						<li class="bronze sponsor">
 							<div class="logo"><a href="https://www-ssl.intel.com/content/www/us/en/homepage.html"><img src="assets/sponsors/intel.png" /></a></div>
 						</li>
+						<li class="bronze sponsor twilio">
+							<div class="logo"><a href="https://www.twilio.com/"><img src="assets/sponsors/twilio.png" /></a></div>
+						</li>
 					</ul>
 
 				</div>
